attempt to fix image not showing

--- a/src/section/landing/style.css
+++ b/src/section/landing/style.css
@@ -1,5 +1,5 @@
 .landing {
-    background-image: url("/assets/image/hero.jpg");
+    background-image: url("/build/image/hero.jpg");
     background-position: center;
     background-repeat: no-repeat;
     -webkit-background-size: cover;
